<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="top"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_sum_text"
            android:text="@string/input_sum_text"/>
        <EditText
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/money_sum"
            android:textSize="30sp"
            android:hint="半角数字入力"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exception_text"
            android:textColor="#ff0000"
            android:text="半角数字で入力してください"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_equalityMoney"
            android:visibility="invisible"
            android:id="@+id/text_equality"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equality"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/text_player_choise"
            android:text="@string/text_player_choise"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearlayout_checkbox"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exception_player_text"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:text="プレイヤーは二人以上選択してください"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:id="@+id/start_btn"
            android:text="@string/start_btn"/>

    </LinearLayout>
</ScrollView>
